--- a/system/templates/item/aspect-sheet.html
+++ b/system/templates/item/aspect-sheet.html
@@ -1,4 +1,4 @@
-{{> "systems/fatex/templates/item/parts/layout/item-header.html" label="FATEx.Item.Aspect.Name" item=item}}
+{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FATEx.Item.Aspect.EditItem" item=item}}
 
 <div class="fatex__settings">
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
