--- a/system/templates/item/parts/layout/item-header.html
+++ b/system/templates/item/parts/layout/item-header.html
@@ -3,14 +3,16 @@
 
         {{!--HEADER--}}
         <div class="desk__header">
-            <div class="fatex__header">
+            <div class="fatex__header item__header">
                 <div class="fatex__header__name">
-                    <label class="fatex__header__label fatex__item__header__label" for="name">{{localize label}}</label>
-                    <input
-                        class="fatex__header__name__input fatex__item__name__input"
-                        name="name"
-                        type="text"
-                        value="{{#ifNotEquals item.name ' '}}{{item.name}}{{/ifNotEquals}}">
+                    <label class="fatex__header__label fatex__item__header__label">
+                        {{#if isOwnedBy}}
+                            {{ isOwnedBy }}
+                        {{else}}
+                            Base item
+                        {{/if}}
+                    </label>
+                    <div class="fatex__header__title fatex__item__header__title">{{localize title}}</div>
                 </div>
 
                 <div class="fatex__header__logo">
