--- a/system/templates/actor/parts/tabs/stunts.html
+++ b/system/templates/actor/parts/tabs/stunts.html
@@ -1,3 +1,9 @@
 <div class="fatex__stunts">
+    <h2 class="fatex__skills__headline">
+        <span>{{localize "FATEx.Sheet.Stunts"}}</span>
 
+        <div class="fatex__item__actions">
+            <span class="fatex__item__add fatex__stunt__add"></span>
+        </div>
+    </h2>
 </div>
