--- a/system/templates/actor/parts/header.html
+++ b/system/templates/actor/parts/header.html
@@ -1,11 +1,11 @@
 <div class="fatex__header">
     <div class="fatex__header__name">
-        <label class="fatex__header__label" for="name">{{localize "FATEx.Sheet.Name"}}</label>
+        <label class="fatex__header__label" for="name">{{localize "FAx.Sheet.Name"}}</label>
         <input class="fatex__header__name__input fatex__input" name="name" type="text" value="{{actor.name}}">
     </div>
 
     <div class="fatex__header__fate-points">
-        <label class="fatex__header__label fatex__header__label--center" for="name">{{localize "FATEx.Sheet.FatePoints"}}</label>
+        <label class="fatex__header__label fatex__header__label--center" for="name">{{localize "FAx.Sheet.FatePoints"}}</label>
 
         <div class="fatex__header__fate-points__wrapper">
             <input class="fatex__header__fp__input" name="data.fatepoints.current" type="text" value="{{data.fatepoints.current}}">
