--- a/system/templates/actor/parts/sidebar/artwork.html
+++ b/system/templates/actor/parts/sidebar/artwork.html
@@ -6,7 +6,7 @@
     </style>
 
     <h2 class="fatex__aspects__headline fatex__headline">
-        <span>{{localize "FATEx.Sheet.Artwork"}}</span>
+        <span>{{localize "FAx.Sheet.Artwork"}}</span>
     </h2>
 
     <div class="fatex__artwork--image fatex__artwork--image--{{actor._id}}" title="{{actor.name}}"></div>
