--- a/system/templates/actor/parts/tabloid/aspects.html
+++ b/system/templates/actor/parts/tabloid/aspects.html
@@ -1,6 +1,6 @@
 <div class="fatex__aspects">
     <h2 class="fatex__aspects__headline fatex__headline">
-        <span>{{localize "FATEx.Sheet.Aspects"}}</span>
+        <span>{{localize "FAx.Sheet.Aspects"}}</span>
         <div class="fatex__headline__actions fatex__item__actions">
             <span class="fatex__item__add fatex__aspect__add"></span>
         </div>
