--- a/system/templates/actor/parts/tabloid/consequences.html
+++ b/system/templates/actor/parts/tabloid/consequences.html
@@ -1,6 +1,6 @@
 <div class="fatex__consequences">
     <h2 class="fatex__consequences__headline fatex__headline">
-        <span>{{localize "FATEx.Sheet.Consequences"}}</span>
+        <span>{{localize "FAx.Sheet.Consequences"}}</span>
         <div class="fatex__headline__actions fatex__item__actions">
             <span class="fatex__item__add fatex__consequence__add"></span>
         </div>
