--- a/system/templates/actor/parts/tabs/skills.html
+++ b/system/templates/actor/parts/tabs/skills.html
@@ -1,6 +1,6 @@
-<div class="fatex__skills">
+<div class="fatex__skills{{#if options.enableColumns}} fatex__skills--columns{{/if}}">
     <h2 class="fatex__skills__headline">
-        <span>{{localize "FATEx.Sheet.Skills"}}</span>
+        <span>{{localize "FAx.Sheet.Skills"}}</span>
 
         <div class="fatex__item__actions">
             <span class="fatex__item__add fatex__skill__add"></span>
