--- a/system/templates/actor/character.html
+++ b/system/templates/actor/character.html
@@ -24,9 +24,9 @@
                     {{!--Tabs--}}
                     <div class="desk__tabs fatex__tabs">
                         <nav class="fatex_tabs__navigation" data-group="primary">
-                            <a class="fatex_tabs__navigation__item item active" data-tab="skills">{{localize "FATEx.Sheet.Tabs.SkillsStunts"}}</a>
-                            <a class="fatex_tabs__navigation__item item" data-tab="extras">{{localize "FATEx.Sheet.Tabs.Extras"}}</a>
-                            <a class="fatex_tabs__navigation__item item" data-tab="bio">{{localize "FATEx.Sheet.Tabs.Bio"}}</a>
+                            <a class="fatex_tabs__navigation__item item active" data-tab="skills">{{localize "FAx.Sheet.Tabs.SkillsStunts"}}</a>
+                            <a class="fatex_tabs__navigation__item item" data-tab="extras">{{localize "FAx.Sheet.Tabs.Extras"}}</a>
+                            <a class="fatex_tabs__navigation__item item" data-tab="bio">{{localize "FAx.Sheet.Tabs.Bio"}}</a>
                         </nav>
 
                         <div class="fatex__tabs__content">
