--- a/system/templates/item/aspect-sheet.html
+++ b/system/templates/item/aspect-sheet.html
@@ -1,21 +1,21 @@
-{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FATEx.Item.Aspect.EditItem" item=item}}
+{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FAx.Item.Aspect.EditItem" item=item}}
 
 <div class="fatex__settings">
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FATEx.Item.Aspect.Value"
+        headline = "FAx.Item.Aspect.Value"
         fieldName = "data.value"
         field = data.value
     }}
 
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FATEx.Item.Aspect.Label"
+        headline = "FAx.Item.Aspect.Label"
         fieldName = "data.label"
         field = data.label
     }}
 
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FATEx.Item.Aspect.Description"
-        help = "FATEx.Item.Aspect.DescriptionHelp"
+        headline = "FAx.Item.Aspect.Description"
+        help = "FAx.Item.Aspect.DescriptionHelp"
         fieldName = "data.description"
         field = data.description
     }}
