--- a/system/templates/item/consequence-sheet.html
+++ b/system/templates/item/consequence-sheet.html
@@ -1,29 +1,29 @@
-{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FATEx.Item.Consequence.EditItem" item=item}}
+{{> "systems/fatex/templates/item/parts/layout/item-header.html" title="FAx.Item.Consequence.EditItem" item=item}}
 
 <div class="fatex__settings">
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FATEx.Item.Consequence.Value"
+        headline = "FAx.Item.Consequence.Value"
         fieldName = "data.value"
         field = data.value
     }}
 
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FATEx.Item.Consequence.Label"
+        headline = "FAx.Item.Consequence.Label"
         fieldName = "data.label"
         field = data.label
-        help = "FATEx.Item.Consequence.LabelHelp"
+        help = "FAx.Item.Consequence.LabelHelp"
     }}
 
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FATEx.Item.Consequence.Icon"
-        help = "FATEx.Item.Consequence.IconHelp"
+        headline = "FAx.Item.Consequence.Icon"
+        help = "FAx.Item.Consequence.IconHelp"
         fieldName = "data.icon"
         field = data.icon
     }}
 
     {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
-        headline = "FATEx.Item.Consequence.Description"
-        help = "FATEx.Item.Consequence.DescriptionHelp"
+        headline = "FAx.Item.Consequence.Description"
+        help = "FAx.Item.Consequence.DescriptionHelp"
         fieldName = "data.description"
         field = data.description
     }}
