Implemented styled chat messages

--- a/style/components.scss
+++ b/style/components.scss
@@ -17,3 +17,4 @@
 @import "components/helper/helper.scss";
 @import "components/copyright/copyright.scss";
 @import "components/skills/skills.scss";
+@import "components/chat/chat.scss";
