--- a/style/extras/fonts.scss
+++ b/style/extras/fonts.scss
@@ -42,6 +42,6 @@
 }
 
 @font-face {
-    font-family: 'Fate Core';
-    src: url('assets/fonts/fate_core.ttf');
+    font-family: 'Fate Icons';
+    src: url('assets/fonts/fate_icons.ttf');
 }
