--- a/style/style.scss
+++ b/style/style.scss
@@ -1,7 +1,8 @@
 @import "settings.scss";
 
-@import "extras/mixins";
-@import "extras/fonts";
-@import "extras/fontawesome";
+@import "extras/mixins.scss";
+@import "extras/fonts.scss";
+@import "extras/fontawesome.scss";
+@import "extras/foundry-ui.scss";
 
 @import "components.scss";
