--- a/style/components/headline/headline.scss
+++ b/style/components/headline/headline.scss
@@ -10,6 +10,10 @@
     box-shadow: 1px 1px 1px $shadow-color;
 }
 
+.fatex__headline--icon {
+    position: relative;
+}
+
 .fatex__headline--center {
     text-align: center;
 }
