First working version of character templates & picker

--- a/style/components.scss
+++ b/style/components.scss
@@ -13,8 +13,10 @@
 @import "components/sheet/item-sheet.scss";
 @import "components/dialog/dialog.scss";
 @import "components/settings/settings.scss";
+@import "components/settings/settins-sheet.scss";
 @import "components/scrollbar/scrollbar.scss";
 @import "components/helper/helper.scss";
 @import "components/copyright/copyright.scss";
 @import "components/skills/skills.scss";
 @import "components/chat/chat.scss";
+@import "components/templates/templates.scss";
