--- a/style/components/settings/settins-sheet.scss
+++ b/style/components/settings/settins-sheet.scss
@@ -1,6 +1,6 @@
-.fatex__item_sheet {
+.fatex__settings_sheet {
     font-family: $primary-font;
-    min-width: 300px;
+    min-width: 500px;
 
     form {
         max-height: 100%;
