--- a/system/templates/settings/template-actors.html
+++ b/system/templates/settings/template-actors.html
@@ -1,6 +1,22 @@
-<div>
-    Hallo! :)
-    {{log this}}
+{{> "systems/fatex/templates/settings/parts/layout/settings-header.html" title="FAx.Settings.Templates.App.Title" label="FAx.Settings.Templates.App.Label"}}
 
-    <button>Klick mich :></button>
+<div class="fatex__templates">
+    {{#each templateActors as |template templateIndex|}}
+        <div class="fatex__template">
+            <div class="fatex__headline">
+                <span>{{ template.name }}</span>
+
+                <div class="fatex__template__actions fatex__headline__actions">
+                    <span class="fatex__template__configure fatex__item__settings" data-template="{{template._id}}"></span>
+                    <span class="fatex__template__delete fatex__item__delete" data-template="{{template._id}}"></span>
+                </div>
+            </div>
+        </div>
+    {{/each}}
+
+    <h2 class="fatex__template__create fatex__headline">
+        <span>{{localize "FAx.Settings.Templates.App.CreateNew"}}</span>
+    </h2>
 </div>
+
+{{> "systems/fatex/templates/settings/parts/layout/settings-footer.html"}}
